--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.obj filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
+*.changes filter=lfs diff=lfs merge=lfs -text
